--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,31 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div class='tableauPlaceholder' id='viz1503038590375' style='position: relative; width:50%; height: auto;'>
+      <noscript><a href='#'><img alt='EV % of light registrations ' src='https://public.tableau.com/static/images/EV/EVv3/Evregoshare/1_rss.png' style='border: none' /></a></noscript>
+      <object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='site_root' value='' />
+        <param name='name' value='EVv3/Evregoshare' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image' value='https://public.tableau.com/static/images/EV/EVv3/Evregoshare/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+      </object>
+    </div>
+    <script type='text/javascript'>
+        var divElement = document.getElementById('viz1503038590375');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        vizElement.style.width = '100%';
+        vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
